# genai-learning-hub

./: .gitignore  .npmrc  .releaserc.json  CONTRIBUTING.md  README.md  nx.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: release-charts.yaml  release.yaml
apps/backend/: .env.example  project.json  pyproject.toml  register-oidc-client.sh
apps/backend/app/: config.py  main.py
apps/backend/app/auth/: __init__.py  config.py  dependencies.py  middleware.py  pkce.py
apps/backend/app/data/: __init__.py  contributions.json  learning_paths.json  news.json  prompts.json  resources.json  showcases.json  skills.json
apps/backend/app/models/: __init__.py
apps/backend/app/routes/: auth.py  contributions.py  health.py  home.py  learning_paths.py  marketplace.py  mcp.py  me.py  news.py  oauth.py  prompts.py  resources.py  showcases.py  skills.py
apps/backend/app/utils/: request_url.py
apps/frontend/: vite.config.mts
charts/: .gitignore  Chart.yaml  values.yaml
charts/genai-learning-hub/: values.schema.json  values.yaml
charts/templates/: configmap-backend.yaml  deployment-backend.yaml  deployment-frontend.yaml  ingress.yaml  service-frontend.yaml
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  frontend.nginx.conf
docs/: 01-project-plan.md  02-content-strategy.md  03-stakeholder-engagement.md  04-technical-architecture.md  05-visual-identity.md  06-executive-review.md  07-deployment-guide.md
helm/: values.schema.json
helm/charts/: common-2.2.0.tgz
(+49 files in other folders)
